增加用户拒绝后的回调、用户选择不再询问的回调，增加小米权限的特殊处理

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 29
     defaultConfig {
         applicationId "com.audient.permissionhelper"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
@@ -22,6 +24,11 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation("androidx.appcompat:appcompat:1.1.0-rc01")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation project(':permission_helper')
+}
+repositories {
+    mavenCentral()
 }
