--- a/permission_helper/build.gradle
+++ b/permission_helper/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 29
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
     }
@@ -19,7 +21,8 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation("androidx.appcompat:appcompat:1.1.0-rc01")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 //////// 打包发布 ////////
@@ -30,7 +33,7 @@ ext {
     GITHUB_REPO_PATH = "D:\\repos"
     PUBLISH_GROUP_ID = 'com.audient'
     PUBLISH_ARTIFACT_ID = 'permission_helper'
-    PUBLISH_VERSION = '1.0.1'
+    PUBLISH_VERSION = '1.1.0'
 }
 
 uploadArchives {
@@ -52,4 +55,7 @@ task androidSourcesJar(type: Jar) {
 }
 artifacts {
     archives androidSourcesJar
+}
+repositories {
+    mavenCentral()
 }
